revert to before update

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "inferno_core_translation"}]
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
-mvlocscript = {git = "https://github.com/ftl-mv-translation/mvloc.git"}
+mvlocscript = {git = "https://github.com/ftl-mv-translation/mvloc.git", branch = "feature-open-project"}
 
 
 [build-system]
